k8s/manifests/client_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webclient-service
spec:
  selector:
    app: webclient
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
