k8s/manifests/server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
